--- a/Shared/Properties/Resources.resx
+++ b/Shared/Properties/Resources.resx
@@ -304,6 +304,30 @@
   <data name="potion_weak_strength" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\potion_weak_strength.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="scrolls_scroll_of_charm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of charm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrolls_scroll_of_entangle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of entangle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrolls_scroll_of_fireball" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of fireball.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrolls_scroll_of_fissure" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of fissure.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrolls_scroll_of_ice_shard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of ice shard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrolls_scroll_of_illusion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of illusion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrolls_scroll_of_quake" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of quake.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrolls_scroll_of_water_blast" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\scrolls_scroll of water blast.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="weapons_axe_gygantallax" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\weapons_axe_gygantallax.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
